tests/ui/imports/unused-import.stderr
error: unused import: `std::fs`
  --> $DIR/unused-import.rs:9:5
   |
LL | use std::fs;
   |     ^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/unused-import.rs:2:9
   |
LL | #![deny(unused_imports)]
   |         ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

